# suep2026

./: clion_ros2.sh  config.txt
2025_ws/install/: local_setup.sh  setup.sh
2025_ws/install/armor_detector/include/armor_detector/: armor.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  tradition.hpp
2025_ws/install/armor_detector/lib/armor_detector/: armor_detector_node
2025_ws/install/armor_detector/share/armor_detector/: local_setup.sh  package.sh
2025_ws/install/armor_tracker/lib/armor_tracker/: armor_tracker_node
2025_ws/install/armor_tracker/share/armor_tracker/: local_setup.sh  package.sh
2025_ws/install/auto_aim_interfaces/share/auto_aim_interfaces/: package.sh
2025_ws/install/buff_detector/lib/buff_detector/: buff_detector_node
2025_ws/install/buff_detector/share/buff_detector/: package.sh
2025_ws/install/buff_interfaces/share/buff_interfaces/: package.sh
2025_ws/install/buff_tracker/lib/buff_tracker/: buff_tracker_node
2025_ws/install/buff_tracker/share/buff_tracker/: local_setup.sh  package.sh
2025_ws/install/hik_camera/lib/hik_camera/: hik_camera_node
2025_ws/install/hik_camera/share/hik_camera/: local_setup.sh  package.sh
2025_ws/install/rm_auto_aim/share/rm_auto_aim/: local_setup.sh  package.sh
2025_ws/install/rm_auto_record/lib/rm_auto_record/: rm_auto_record_node
2025_ws/install/rm_auto_record/share/rm_auto_record/: local_setup.sh  package.sh
2025_ws/install/rm_buff/share/rm_buff/: package.sh
2025_ws/install/rm_buff_bringup/share/rm_buff_bringup/: package.sh
2025_ws/install/rm_gimbal_description/share/rm_gimbal_description/: package.sh
2025_ws/install/rm_serial_driver/lib/rm_serial_driver/: rm_serial_driver_node
2025_ws/install/rm_serial_driver/share/rm_serial_driver/: local_setup.sh  package.sh
2025_ws/install/rm_vision_bringup/share/rm_vision_bringup/: local_setup.sh  package.sh
2025_ws/log/: latest_build
dev_ws/install/: local_setup.sh  setup.sh
dev_ws/install/armor_detector/include/: armor.hpp  detector_node.hpp  number_classifier.hpp
dev_ws/install/armor_detector/lib/armor_detector/: armor_detector_node
dev_ws/install/armor_detector/share/armor_detector/: package.sh
dev_ws/install/armor_tracker/include/armor_tracker/: extended_kalman_filter.hpp
dev_ws/install/armor_tracker/lib/armor_tracker/: armor_tracker_node
dev_ws/install/armor_tracker/share/armor_tracker/: package.sh
dev_ws/install/auto_aim_interfaces/share/auto_aim_interfaces/: package.sh  package.xml
dev_ws/install/buff_detector/lib/buff_detector/: buff_detector_node
dev_ws/install/buff_detector/share/buff_detector/: local_setup.sh  package.sh
dev_ws/install/buff_interfaces/share/buff_interfaces/: package.sh
dev_ws/install/buff_tracker/lib/buff_tracker/: buff_tracker_node
dev_ws/install/buff_tracker/share/buff_tracker/: package.sh
dev_ws/install/hik_camera/lib/hik_camera/: hik_camera_node
dev_ws/install/hik_camera/share/hik_camera/: package.sh
dev_ws/install/rm_auto_record/lib/rm_auto_record/: rm_auto_record_node
dev_ws/install/rm_auto_record/share/rm_auto_record/: local_setup.sh  package.sh
dev_ws/install/rm_buff/share/rm_buff/: local_setup.sh  package.sh
dev_ws/install/rm_buff_bringup/share/rm_buff_bringup/: package.sh
dev_ws/install/rm_gimbal_description/share/rm_gimbal_description/: local_setup.sh  package.sh
dev_ws/install/rm_serial_driver/include/rm_serial_driver/: packet.hpp
dev_ws/install/rm_serial_driver/lib/rm_serial_driver/: rm_serial_driver_node
dev_ws/install/rm_serial_driver/share/rm_serial_driver/: local_setup.sh  package.sh
dev_ws/install/rm_vision_bringup/share/rm_vision_bringup/: package.sh
dev_ws/log/: latest_build
dev_ws/src/hik_camera/: CMakeLists.txt
dev_ws/src/hik_camera/src/: hik_camera_node.cpp
dev_ws/src/rm_auto_aim/armor_detector/: CMakeLists.txt  cmake_commands.bat  package.xml
dev_ws/src/rm_auto_aim/armor_detector/include/: detector_node.hpp  pnp_solver.hpp
dev_ws/src/rm_auto_aim/armor_detector/src/: detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
dev_ws/src/rm_auto_aim/armor_tracker/: CMakeLists.txt
dev_ws/src/rm_auto_aim/armor_tracker/include/armor_tracker/: tracker_node.hpp
dev_ws/src/rm_auto_aim/armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
dev_ws/src/rm_gimbal_description/: CMakeLists.txt
dev_ws/src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
dev_ws/src/rm_serial_driver/: CMakeLists.txt
dev_ws/src/rm_serial_driver/config/: serial_driver.yaml
dev_ws/src/rm_serial_driver/include/rm_serial_driver/: crc.hpp  fake.hpp  packet.hpp  rm_serial_driver.hpp
dev_ws/src/rm_serial_driver/src/: crc.cpp  fake.cpp  main.cpp  rm_serial_driver.cpp
dev_ws/src/rm_vision/rm_vision_bringup/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
rm_ws/install/: local_setup.sh  setup.sh
rm_ws/install/armor_detector/include/: detector_node.hpp
rm_ws/install/armor_detector/lib/armor_detector/: armor_detector_node
rm_ws/install/armor_detector/share/armor_detector/: local_setup.sh  package.sh
rm_ws/install/armor_tracker/lib/armor_tracker/: armor_tracker_node
rm_ws/install/armor_tracker/share/armor_tracker/: package.sh
rm_ws/install/auto_aim_interfaces/share/auto_aim_interfaces/: local_setup.sh  package.sh
rm_ws/install/hik_camera/lib/hik_camera/: hik_camera_node
rm_ws/install/hik_camera/share/hik_camera/: package.sh
rm_ws/log/: latest_build
rm_ws/src/rm_auto_aim/armor_detector/: CMakeLists.txt
rm_ws/src/rm_auto_aim/armor_detector/include/: detector.hpp  (+1 more)
rm_ws/src/rm_auto_aim/armor_tracker/: CMakeLists.txt
rm_ws/src/rm_auto_aim/armor_tracker/include/armor_tracker/: tracker_node.hpp
rm_ws/src/rm_auto_aim/armor_tracker/src/: tracker_node.cpp
rm_ws/src/rm_auto_aim/auto_aim_interfaces/: CMakeLists.txt
rm_ws/src/rm_serial_driver/: CMakeLists.txt
rm_ws/src/rm_serial_driver/src/: fake.cpp  rm_serial_driver.cpp
rm_ws/src/rm_vision/rm_vision_bringup/: CMakeLists.txt  package.xml
ros_ws/src/hik_camera/: CMakeLists.txt
ros_ws/src/hik_camera/src/: hik_camera_node.cpp
(+46 files in other folders)
